<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/input_nama_depan"
            android:hint="@string/txt_nama_depan"
            style="@style/text_style"/>

        <EditText
            android:id="@+id/input_nama_belakang"
            android:hint="@string/txt_nama_belakang"
            style="@style/text_style"/>

        <EditText
            android:id="@+id/input_asal_daerah"
            android:hint="@string/txt_asal_daerah"
            style="@style/text_style"/>

        <Button
            android:id="@+id/btn_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_result"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/result_nama_lengkap"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    style="@style/result_style"/>

                <TextView
                    android:text="@string/txt_is"
                    style="@style/result_style"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/result_namaLengkap"
                    android:text="@string/empty"
                    style="@style/result_style"
                    android:textStyle="bold"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_asal_daerah"
                    android:layout_marginTop="10dp"
                    style="@style/result_style"/>

                <TextView
                    android:text="@string/txt_is"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    style="@style/result_style"/>

                <TextView
                    android:id="@+id/result_asalDaerah"
                    android:text="@string/empty"
                    style="@style/result_style"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>

            </TableRow>

        </TableLayout>




    </LinearLayout>

</ScrollView>